add labels with initials

--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -13,14 +13,14 @@
 Lorem Ipsum
 \end{abstract}
 % overview
-\section{Project Overview}
+\section{Project Overview}\label{overview-SM}
 Anttris is designed to be a game that offers both creative freedom and a competitive edge. The game revolves around solving puzzle cubes which are composed of different types of blocks. Each block has a special property allowing for sophisticated puzzles to be created. Players can solve the blocks by interacting with these blocks, doing things from removing blocks from the cube to setting off massive chains!
 
 Anttris will include two different game-mode categories: competitive game modes, and single-player game modes. Single-player game modes will focus on clearing puzzles with emphasis placed on efficiency of the solution or solution time. Competitive game modes shift the focus to solving cubes faster than an opponent.
 
 One central game concept to Anttris is the ability to creat your own puzzle blocks. Players will be able to create custom blocks that they can use when playing competitively. The goal of the game here is no longer to simply solve a cube faster than your opponent; you now also want to \textsl{create} a puzzle that will confuse your opponent long enough to solve theirs first.
-\subsection{Scope and Objectives}
-\subsection{Supplementary Requirements}
+\subsection{Scope and Objectives}\label{scope-obj-CA}
+\subsection{Supplementary Requirements}\label{supplementary-reqs-SM}
 % customer reqs
 \subsubsection{Interface Requirements}
 To make our video game easy to use, it is required that the user interface
@@ -45,7 +45,7 @@ computer user. To this end, the game is required to meet the above-defined
 speed standard when tested on computers commonly used in a traditional office
 workspace whose primary purpose is word-processing and web browsing.
 
-\section{Customer Requirements}
+\section{Customer Requirements}\label{cust-reqs-HR}
 \subsection{User-Case Diagrams}
 \subsection{Actor Descriptions}
 \subsection{Use-case Descriptions}
@@ -68,28 +68,28 @@ workspace whose primary purpose is word-processing and web browsing.
 \end{mdframed}
 
 % reqs analysis
-\section{Requirements Analysis}
+%\section{Requirements Analysis}\label{reqs-analysis-BC}
 
-\subsection{Scope and Objectives}
+%\subsection{Scope and Objectives}
 
-\subsection{Supplementary Requirements}
+%\subsection{Supplementary Requirements}
 
 % reqs analysis
 \section{Requirements Analysis}
 
-\subsection{Structural Analysis}
+\subsection{Structural Analysis}\label{struct-analysis-BC}
 
-\subsection{Behavioral Analysis}
+\subsection{Behavioral Analysis}\label{behavioral-analysis-HR}
 
-\subsection{User Interface Analysis}
+\subsection{User Interface Analysis}\label{UI-analysis-CA}
 
 % validation and criteria
-\section{Validation and Criteria}
+\section{Validation and Criteria}\label{validation-BC}
 
 % appendices
 \section{Appendices}
 
-\subsection{Project Status}
+\subsection{Project Status}\label{status-ST}
 \end{document}
 
 
