--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -90,6 +90,37 @@ workspace whose primary purpose is word-processing and web browsing.
 \section{Appendices}
 
 \subsection{Project Status}\label{status-ST}
+
+Much progress has been made. We have a working Javascript prototype, a 
+workable timeline for Scrum, and we have begun our first sprint. The 
+primary objective of this first sprint is to convert the prototype 
+into project for the Godot game engine \cite{godot:gameengine}. 
+
+Currently, we plan to have four sprints of two weeks duration each, 
+with weekends acting as slack days. Due to scheduling, the first 
+sprint is slightly longer than two weeks, so we plan to do more to 
+offset the projected downtime during spring break. Sean has taken on the job of coordinating the team as Scrum Master.
+
+Our team also has solid organization and collaboration thanks to various tools, including Github for our git repositories \cite{github:site}, Zenhub for integrated Agile project management in Github \cite{zenhub:site}, Slack for team collaboration \cite{slack:site}, and Travis CI for continuous integration \cite{travis:site}. 
+
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|l|l|l|l|l|}
+\hline
+& Sprint \#1 & Sprint \#2 & Sprint \#3 & Sprint \#4 \\ \hline
+Date & 2/18 - 3/6 & 3/10 - 3/24 & 3/31 - 4/14 & 4/21 - 5/5 \\ \hline
+Goals & Prototype & Get basic game working & Advanced features & Finish \\ \hline
+Issues & none so far & Spring Break!?! & may not have time & hopefully none \\ \hline
+&  &  &  &  \\ \hline
+\end{tabular}
+\caption{Scrum Timeline}
+\label{timeline}
+\end{table}
+
+
+\bibliographystyle{abbrv}
+\bibliography{team5-requirements-spec}
 \end{document}
 
 
