--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -109,7 +109,7 @@ Our team also has solid organization and collaboration thanks to various tools, 
 \begin{tabular}{|l|l|l|l|l|}
 \hline
 & Sprint \#1 & Sprint \#2 & Sprint \#3 & Sprint \#4 \\ \hline
-Date & 2/18 - 3/6 & 3/10 - 3/24 & 3/31 - 4/14 & 4/21 - 5/5 \\ \hline
+Date & 2/18 - 3/6 & 3/9 - 3/27 & 3/30 - 4/10 & 4/13 - end \\ \hline
 Goals & Prototype & Get basic game working & Advanced features & Finish \\ \hline
 Issues & none so far & Spring Break!?! & may not have time & hopefully none \\ \hline
 &  &  &  &  \\ \hline
