--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -20,6 +20,18 @@ Anttris will include two different game-mode categories: competitive game modes,
 
 One central game concept to Anttris is the ability to creat your own puzzle blocks. Players will be able to create custom blocks that they can use when playing competitively. The goal of the game here is no longer to simply solve a cube faster than your opponent; you now also want to \textsl{create} a puzzle that will confuse your opponent long enough to solve theirs first.
 \subsection{Scope and Objectives}\label{scope-obj-CA}
+Anttris is a simple puzzle game idea that has many elements that can be extended after completion of the core gameplay. The project’s scope involves creating self-contained executables that work on many different platforms (including, but not limited to, PC, Mac, Linux) and can connect to other players through direct connection and, with enough time, through a random connection process involving a host server. In order to complete the project, we must utilize a game development framework that will provide the basic functionality of a 3-dimensional game. To further extend the scope, the game will need to use networking methods to connect two players together for competitive games. The objectives for the project have been planned in a way that the core gameplay mechanics can be completed on their own and will give a functional and complete game in itself. If the core of the project is completed ahead of schedule, then further objectives have been set in place that will allow for the additional of many neat and unique features that will add to the game’s fun and replayability factors. The main objectives of the project involve:
+\begin{itemize}
+ \item Completing core gameplay mechanics. This involves completing a single-player game that uses user input to manipulate the game’s state into winning the game.
+ \item Completing graphical elements. This involves creating and modifying the visual elements of the game from the textures of the 3d objects to the graphical user interface.
+ \item Completing multiplayer gameplay mechanics. This involves connecting to and communicating two individual players together on separate machines in order for the players to compete with each other on preset puzzle or puzzle they have made themselves.
+ \item Adding additional gameplay mechanics. This involves adding on additional features that we may not have enough time to complete within the project’s timeline, but would like to if the base project is completed before scheduled. These ideas involve:
+  \begin{itemize}
+  \item Adding new block types.
+  \item Adding online connections through a server setup instead of direct connection.
+  \item Adding new competitive and single player game modes based on the same puzzle mechanics, such as ‘race the clock’ or ‘remove all blocks’.
+  \end{itemize}
+\end{itemize}
 \subsection{Supplementary Requirements}\label{supplementary-reqs-SM}
 % customer reqs
 \subsubsection{Interface Requirements}
