Fixed sloppy use of 'blocks' and 'cubes' to better reflect the game; The whole puzzle is refered to as a puzzle-cube, and the blocks that make it up are refered to as blocks.

--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -14,11 +14,11 @@ Lorem Ipsum
 \end{abstract}
 % overview
 \section{Project Overview}\label{overview-SM}
-Anttris is designed to be a game that offers both creative freedom and a competitive edge. The game revolves around solving puzzle cubes which are composed of different types of blocks. Each block has a special property allowing for sophisticated puzzles to be created. Players can solve the blocks by interacting with these blocks, doing things from removing blocks from the cube to setting off massive chains!
+Anttris is designed to be a game that offers both creative freedom and a competitive edge. The game revolves around solving puzzle cubes which are composed of different types of blocks. Each block has a special property allowing for sophisticated puzzles to be created. Players can solve the puzzle cubes by interacting with these blocks, doing things from removing blocks from the cube to setting off massive chains!
 
-Anttris will include two different game-mode categories: competitive game modes, and single-player game modes. Single-player game modes will focus on clearing puzzles with emphasis placed on efficiency of the solution or solution time. Competitive game modes shift the focus to solving cubes faster than an opponent.
+Anttris will include two different game-mode categories: competitive game modes, and single-player game modes. Single-player game modes will focus on clearing puzzle cubes with emphasis placed on efficiency of the solution or solution time. Competitive game modes shift the focus to solving cubes faster than an opponent.
 
-One central game concept to Anttris is the ability to creat your own puzzle blocks. Players will be able to create custom blocks that they can use when playing competitively. The goal of the game here is no longer to simply solve a cube faster than your opponent; you now also want to \textsl{create} a puzzle that will confuse your opponent long enough to solve theirs first.
+One central game concept to Anttris is the ability to creat your own puzzle cubes. Players will be able to create puzzle cubes that they can use when playing competitively. The goal of the game here is no longer to simply solve a cube faster than your opponent; you now also want to \textsl{create} a puzzle that will confuse your opponent long enough to solve theirs first.
 \subsection{Scope and Objectives}\label{scope-obj-CA}
 Anttris is a simple puzzle game idea that has many elements that can be extended after completion of the core gameplay. The project’s scope involves creating self-contained executables that work on many different platforms (including, but not limited to, PC, Mac, Linux) and can connect to other players through direct connection and, with enough time, through a random connection process involving a host server. In order to complete the project, we must utilize a game development framework that will provide the basic functionality of a 3-dimensional game. To further extend the scope, the game will need to use networking methods to connect two players together for competitive games. The objectives for the project have been planned in a way that the core gameplay mechanics can be completed on their own and will give a functional and complete game in itself. If the core of the project is completed ahead of schedule, then further objectives have been set in place that will allow for the additional of many neat and unique features that will add to the game’s fun and replayability factors. The main objectives of the project involve:
 \begin{itemize}
