--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -3,6 +3,7 @@
 \usepackage{hyperref}
 \usepackage{cite}
 \usepackage{mdframed}
+\graphicspath{ {pngs/} }
 
 \begin{document}
 \title{CSE326 Semester Project Requirement Spec: Anttris}
@@ -94,6 +95,9 @@ workspace whose primary purpose is word-processing and web browsing.
 \subsection{Behavioral Analysis}\label{behavioral-analysis-HR}
 
 \subsection{User Interface Analysis}\label{UI-analysis-CA}
+The user interface in Anttris will follow the design of most simple game interfaces. It will include a main menu, configuration menu, play menu, editor interface and game interface. All of these will be connected to each other through the use of buttons on the screen that can be pressed with a mouse, a finger on a touch device and perhaps, with enough time, a game controller. Included below are flow diagrams for the user interface as well as initial design ideas for each individual interface.\\
+\\
+\includegraphics[width=6in]{UIFlow}
 
 % validation and criteria
 \section{Validation and Criteria}\label{validation-BC}
