easy mdframed toggle

--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -2,11 +2,11 @@
 \usepackage{graphicx}
 \usepackage{hyperref}
 \usepackage{cite}
-%\usepackage{mdframed}
+%MDFRAMED%\usepackage{mdframed}
 \usepackage{float} % for [H] anchoring method
 
 \graphicspath{ {pngs/} }
-%\mdfsetup{nobreak=true}
+%MDFRAMED%\mdfsetup{nobreak=true}
 
 \begin{document}
 \title{CSE326 Semester Project Requirement Spec: Anttris}
@@ -73,7 +73,7 @@ workspace whose primary purpose is word-processing and web browsing.
 
 \subsection{Use-case Descriptions}
 
-%\begin{mdframed}
+%MDFRAMED%\begin{mdframed}
     \subsubsection{Host match}
     \begin{description}
         \item[Entry conditions] Internet connection
@@ -89,9 +89,9 @@ workspace whose primary purpose is word-processing and web browsing.
                 \item The game ends when all players disconnect.
             \end{enumerate}
     \end{description}
-%\end{mdframed}
+%MDFRAMED%\end{mdframed}
 
-%\begin{mdframed}
+%MDFRAMED%\begin{mdframed}
     \subsubsection{Join match}
     \begin{description}
         \item[Entry conditions] Internet connection
@@ -107,10 +107,10 @@ workspace whose primary purpose is word-processing and web browsing.
                 \item The game ends when all players disconnect.
             \end{enumerate}
     \end{description}
-%\end{mdframed}
+%MDFRAMED%\end{mdframed}
 
 
-%\begin{mdframed}
+%MDFRAMED%\begin{mdframed}
     \subsubsection{Edit puzzle}
     \begin{description}
         \item[Entry conditions] Internet connection
@@ -126,10 +126,10 @@ workspace whose primary purpose is word-processing and web browsing.
                 \item The game ends when all players disconnect.
             \end{enumerate}
     \end{description}
-%\end{mdframed}
+%MDFRAMED%\end{mdframed}
 
 
-%\begin{mdframed}
+%MDFRAMED%\begin{mdframed}
     \subsubsection{Solve puzzle}
     \begin{description}
         \item[Entry conditions] Internet connection
@@ -145,10 +145,10 @@ workspace whose primary purpose is word-processing and web browsing.
                 \item The game ends when all players disconnect.
             \end{enumerate}
     \end{description}
-%\end{mdframed}
+%MDFRAMED%\end{mdframed}
 
 
-%\begin{mdframed}
+%MDFRAMED%\begin{mdframed}
     \subsubsection{Navigate puzzle}
     \begin{description}
         \item[Entry conditions] Internet connection
@@ -164,10 +164,10 @@ workspace whose primary purpose is word-processing and web browsing.
                 \item The game ends when all players disconnect.
             \end{enumerate}
     \end{description}
-%\end{mdframed}
+%MDFRAMED%\end{mdframed}
 
 
-%\begin{mdframed}
+%MDFRAMED%\begin{mdframed}
     \subsubsection{Host match}
     \begin{description}
         \item[Entry conditions] Internet connection
@@ -183,10 +183,10 @@ workspace whose primary purpose is word-processing and web browsing.
                 \item The game ends when all players disconnect.
             \end{enumerate}
     \end{description}
-%\end{mdframed}
+%MDFRAMED%\end{mdframed}
 
 
-%\begin{mdframed}
+%MDFRAMED%\begin{mdframed}
     \subsubsection{Host match}
     \begin{description}
         \item[Entry conditions] Internet connection
@@ -202,7 +202,7 @@ workspace whose primary purpose is word-processing and web browsing.
                 \item The game ends when all players disconnect.
             \end{enumerate}
     \end{description}
-%\end{mdframed}
+%MDFRAMED%\end{mdframed}
 
 
 
