--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -62,7 +62,7 @@ speed standard when tested on computers commonly used in a traditional office
 workspace whose primary purpose is word-processing and web browsing.
 
 \section{Customer Requirements}\label{cust-reqs-HR}
-\subsection{User-Case Diagrams}
+\subsection{Use-Case Diagrams}
     \begin{figure}[H]
         \centering
         \includegraphics[width=6in]{use_cases.png}
@@ -70,6 +70,10 @@ workspace whose primary purpose is word-processing and web browsing.
     \end{figure}
 
 \subsection{Actor Descriptions}
+    \begin{description}
+        \item[Local player]
+        \item[Online player]
+    \end{description}
 
 \subsection{Use-case Descriptions}
 
@@ -220,6 +224,9 @@ workspace whose primary purpose is word-processing and web browsing.
 
 \subsection{Behavioral Analysis}\label{behavioral-analysis-HR}
 
+    % Summary....
+
+% should've used \forloop
     \begin{figure}[H]
         \centering
         \includegraphics[width=6in]{sequence_host_match.png}
